--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,3 @@
 {{#each}}
-  <li><h3>{{id}} {{name}} - {{role}}</h3></li>
+  <li><h3>{{#link-to 'employee' id}}{{name}} - {{role}}{{/link-to}}</h3></li>
 {{/each}}
