--- a/app/templates/employee.hbs
+++ b/app/templates/employee.hbs
@@ -1,4 +1,5 @@
-<h1>{{name}}'s boss is:</h1>
-{{boss.name}}
-
+<h1>{{name}}'s boss is: {{boss.name}}</h1>
 <button id='backButton' {{action 'home'}}>Back</button>
+{{#each projects}}
+	<li>{{name}}</li>
+{{/each}}
